# arkui-linux

./: .gitignore  .gitmodules  .gn  BUILD.gn  README.en.md  README.md  compile_commands.json  config.gni
ace_engine/: .gitignore  BUILD.gn  OAT.xml  README.md  README_zh.md  ace_config.gni  如何新增一个组件.md
ace_engine/frameworks/base/: BUILD.gn
ace_engine/frameworks/bridge/: BUILD.gn
ace_engine/frameworks/core/: BUILD.gn
ace_engine/ft_build/: BUILD.gn  ace_config.gni
ace_engine/interfaces/inner_api/: BUILD.gn
ace_engine/interfaces/native/: BUILD.gn  libace.ndk.json  native_interface_xcomponent.cpp  native_interface_xcomponent.h
ace_engine/interfaces/test/: BUILD.gn
ace_engine/test/fuzztest/: BUILD.gn
ace_engine/uicast_interface/: BUILD.gn  config.gni  js_uicast.h  uicast_context_impl.h  uicast_impl.h  uicast_jsi_impl.h
ace_engine/uicast_interface/ft_build/: BUILD.gn  config.gni
ace_engine/uicast_interface/impl/: js_uicast.cpp  uicast_context_impl.cpp  uicast_impl.cpp  uicast_jsi_impl.cpp
arkcompiler/ets_frontend/: .gitattributes  .gitignore  BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  ets_frontend_config.gni
arkcompiler/ets_frontend/es2panda/: BUILD.gn  CMakeLists.txt  README.md  es2abc_config.gni  es2panda.cpp  es2panda.h
arkcompiler/ets_frontend/ft_build/: BUILD.gn  ets_frontend_config.gni
arkcompiler/ets_frontend/legacy_bin/: BUILD.gn  prebuilts-readme-legacy.md
arkcompiler/ets_frontend/merge_abc/: BUILD.gn  HowToWriteProtoForAssemblyStuff.md
arkcompiler/ets_frontend/test262/: CI_tests.txt  README.md  babel-preprocessor.js  config.py  dynamicImport_tests.txt  es2015_tests.txt  es2021_tests.txt  es2abc_skip_tests.json  es5_tests.txt  eshost.patch  harness.patch  intl_skip_tests.json  intl_tests.txt  module_tests.txt  run_sunspider.py  run_test262.py  skip_tests.json  ts2abc_skip_tests.json  utils.py
arkcompiler/ets_frontend/testTs/: README.md  README_zh.md  config.py  import_tests.json  run_testTs.py  skip_tests.json  test-case.patch  utils.py
arkcompiler/ets_frontend/test_ecma_bcopt/: test_bytecode_optimizer_for_js.js  test_bytecode_optimizer_for_js.txt
arkcompiler/ets_frontend/ts2panda/: BUILD.gn  README.md  package-lock.json  ts2abc_config.gni  tsconfig.json  webpack.config.js
arkcompiler/ets_runtime/: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  js_runtime_config.gni  libark_jsruntime.map
arkcompiler/ets_runtime/docs/: development-example-zh.md  development-example.md  environment-setup-and-compilation-zh.md  environment-setup-and-compilation.md  overview-zh.md  using-the-toolchain-zh.md  using-the-toolchain.md
arkcompiler/ets_runtime/ecmascript/: aot_file_manager.cpp  aot_file_manager.h  aot_version.h  async_generator_helper.cpp  async_generator_helper.h  byte_array.cpp  byte_array.h  common.h  date_parse.cpp  date_parse.h  dump.cpp  ecma_global_storage.h  ecma_handle_scope.h  ecma_isa.yaml  ecma_macros.h  ecma_param_configuration.h  ecma_runtime_call_info.h  ecma_string-inl.h  ecma_string.cpp  ecma_string.h  ecma_string_table.cpp  ecma_string_table.h  ecma_vm.cpp  ecma_vm.h  frames.cpp  frames.h  free_object.cpp  free_object.h  generator_helper.cpp  global_dictionary-inl.h  global_env.h  global_env_constants-inl.h  global_env_constants.cpp  global_env_constants.h  global_handle_collection.h  js_array.cpp  js_array.h  js_array_iterator.cpp  js_arraybuffer.cpp  js_arraybuffer.h  (+123 more)
arkcompiler/ets_runtime/ft_build/: BUILD.gn  js_runtime_config.gni
arkcompiler/ets_runtime/script/: build_resource_to_cpp.py  run_ark_executable.py
arkcompiler/ets_runtime/test/: runtest.py  test_helper.gni
arkcompiler/runtime_core/: AUTHORS  BUILD.gn  CMakeLists.txt  OAT.xml  README.md  README_zh.md  ark_config.gni  ark_root.gni  bundle.json
arkcompiler/runtime_core/assembler/: BUILD.gn  CMakeLists.txt  annotation.cpp  annotation.h  asm_isapi.rb  asm_metadata.rb  assembly-context.h  assembly-debug.h  assembly-emitter.cpp  assembly-emitter.h  assembly-field.h  assembly-file-location.h  assembly-function.h  assembly-ins.cpp  assembly-ins.h  assembly-label.h  assembly-literals.h  assembly-methodhandle.h  assembly-parser.cpp  assembly-parser.h  assembly-program.cpp  assembly-program.h  assembly-record.h  assembly-type.cpp  assembly-type.h  context.cpp  define.h  error.h  ide_helpers.h  lexer.cpp  lexer.h  mangling.h  meta.cpp  meta.h  metadata.yaml  pandasm.cpp  pandasm.h
arkcompiler/runtime_core/bytecode_optimizer/: BUILD.gn  CMakeLists.txt  bytecode_encoder.h  bytecode_optimizer_isapi.rb  bytecodeopt_options.h  codegen.cpp  codegen.h  common.cpp  common.h  ir_interface.h  optimize_bytecode.cpp  optimize_bytecode.h  options.yaml  reg_acc_alloc.cpp  reg_acc_alloc.h  reg_encoder.cpp  reg_encoder.h  runtime_adapter.h
arkcompiler/runtime_core/cmake/: ClangTidy.cmake  CodeStyle.cmake  CommonTesting.cmake  Definitions.cmake  Doxygen.cmake  HostTools.cmake  PandaAssembly.cmake  PostPlugins.cmake  README.md  Sanitizers.cmake  TemplateBasedGen.cmake  Testing.cmake
arkcompiler/runtime_core/compiler/: BUILD.gn  CMakeLists.txt  CompilerInstTemplatesPostPlugins.cmake  CompilerIntrinsicsPostPlugins.cmake  compile_method.cpp  compile_method.h  compiler.yaml  compiler_logger.cpp  compiler_logger.h  compiler_options.cpp  compiler_options.h  optimizer_run.cpp  optimizer_run.h
arkcompiler/runtime_core/cross_values/: BUILD.gn  CMakeLists.txt  cross_values_generator.rb  cross_values_getters_generator.rb  diff_check_values.sh  (+1 more)
napi/: BUILD.gn  OAT.xml  README.md  README_zh.md  bundle.json  libnapi.ndk.json  napi.gni
napi/ft_build/: BUILD.gn  napi.gni
napi/module_manager/: module_load_checker.cpp  module_load_checker.h  native_module_manager.cpp  native_module_manager.h
napi/native_engine/: native_api.cpp  native_async_work.cpp  native_async_work.h  native_engine.cpp  native_engine.h  native_engine_interface.cpp  native_engine_interface.h  native_node_api.cpp  native_safe_async_work.cpp  native_safe_async_work.h  native_value.h
napi/scope_manager/: native_scope_manager.cpp  native_scope_manager.h
napi/utils/: log.cpp  log.h
(+13414 files in other folders)
