# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../ace_config.gni")

ace_uicast = "$ace_root/uicast_interface"
uicast_root_deps = []
uicast_root_include = []

uicast_defines = []

uicast_frontend_sources = [
  "$ace_uicast/impl/js_uicast.cpp",
  "$ace_uicast/impl/uicast_impl.cpp",
]

uicast_core_sources = [ "$ace_uicast/impl/uicast_context_impl.cpp" ]

uicast_jsi_sources = [ "$ace_uicast/impl/uicast_jsi_impl.cpp" ]
